<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hello_white">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_your_profile_textview"
        android:id="@+id/settings_your_profile_textview"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settings_name_textview"
        android:text="@string/settings_name_textview"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_indent_horizontal_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_age_textview"
        android:id="@+id/settings_age_textview"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:layout_marginLeft="@dimen/activity_indent_horizontal_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_hometown_textview"
        android:id="@+id/settings_hometown_textview"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:layout_marginLeft="@dimen/activity_indent_horizontal_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settings_match_preferences_textview"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:text="@string/settings_match_preferences_textview"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_age_spread_textview"
        android:id="@+id/settings_age_spread_textview"
        android:textSize="@dimen/abc_text_size_display_1_material"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_indent_horizontal_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_age_spread_indicator"
        android:id="@+id/settings_age_spread_indicator"
        android:layout_marginLeft="@dimen/activity_indent_horizontal_margin"
        android:textSize="@dimen/abc_text_size_headline_material" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_gender_spread_textview"
        android:id="@+id/settings_gender_spread_textview"
        android:layout_marginLeft="@dimen/activity_indent_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="@dimen/abc_text_size_display_1_material" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_gender_spread_indicator"
        android:id="@+id/settings_gender_spread_indicator"
        android:layout_marginLeft="@dimen/activity_indent_horizontal_margin"
        android:textSize="@dimen/abc_text_size_headline_material" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_save_button"
        android:id="@+id/settings_save_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

</LinearLayout>